Added screen orientation lock to quick settings + added small fix for orientation change in swipe screen

--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -613,13 +613,14 @@
 
           <!-- Quick settings -->
           <div id="quick-settings" role="toolbar">
-            <li>
-              <ul><a href="#" id="quick-settings-wifi" class="icon" data-icon="wifi-4" data-enabled="false" role="button"></a></ul>
-              <ul><a href="#" id="quick-settings-airplane-mode" class="icon" data-icon="airplane" data-enabled="false" role="button"></a></ul>
-              <ul><a href="#" id="quick-settings-bluetooth" class="icon" data-icon="bluetooth" data-enabled="false" role="button"></a></ul>
-              <ul><a href="#" id="quick-settings-data" class="icon" data-icon="data" data-enabled="false" role="button"></a></ul>
-              <ul><a href="#" id="quick-settings-full-app" class="icon" data-icon="settings" data-enabled="false" role="button" data-l10n-id="settingsButton"></a></ul>
-            </li>
+            <ul>
+              <li><a href="#" id="quick-settings-wifi" class="icon" data-icon="wifi-4" data-enabled="false" role="button"></a></li>
+              <li><a href="#" id="quick-settings-airplane-mode" class="icon" data-icon="airplane" data-enabled="false" role="button"></a></li>
+              <li><a href="#" id="quick-settings-bluetooth" class="icon" data-icon="bluetooth" data-enabled="false" role="button"></a></li>
+              <li><a href="#" id="quick-settings-data" class="icon" data-icon="data" data-enabled="false" role="button"></a></li>
+              <li><a href="#" id="quick-settings-orientation-lock" class="icon" data-icon="lock" data-enabled="false" role="button"></a></li>
+              <li class="quick-settings-long-button"><a href="#" id="quick-settings-full-app" class="icon" data-icon="settings" data-enabled="false" role="button" data-l10n-id="settings-link">Settings</a></li>
+            </ul>
           </div>
         </div>
       </div>
