Added screen orientation lock icon to statusbar, still testing

--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -496,6 +496,7 @@
             <div id="statusbar-flight-mode" class="sb-icon sb-icon-flight-mode" hidden role="listitem" data-l10n-id="statusbarFlightMode"></div>
             <div id="statusbar-wifi" class="sb-icon sb-icon-wifi" data-level="4" hidden role="listitem"></div>
             <div id="statusbar-connections" class="sb-icon-connections" hidden role="presentation"></div>
+            <div id="statusbar-lock-orientation" class="sb-icon sb-icon-lock-orientation" hidden role="listitem"></div>
             <!-- HACK: We use images instead of divs to enforce allocation of a
                  dedicated layer just for this animated icons, remove after
                  https://bugzil.la/717872 gets fixed -->
