Added button to close all apps in task manager - needs more work

--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -1161,6 +1161,7 @@
       <!-- cards view -->
       <div id="cards-view" data-z-index-level="cards-view">
         <ul id="cards-list"></ul>
+        <button id="modui-cards-button-close-all" class="close-all-cards">Close all</button>
         <span id="cards-no-recent-windows" class="no-recent-apps" data-l10n-id="no-recent-app-windows">No recent windows</span>
       </div>
 
