Added French translations for 'go to settings' button and 'close all' button Also added 'modui-' prefix to l10n locales attrinutes

--- a/apps/system/index.html
+++ b/apps/system/index.html
@@ -625,7 +625,7 @@
               <li><a href="#" id="quick-settings-bluetooth" class="icon" data-icon="bluetooth" data-enabled="false" role="button"></a></li>
               <li><a href="#" id="quick-settings-data" class="icon" data-icon="data" data-enabled="false" role="button"></a></li>
               <li><a href="#" id="quick-settings-orientation-lock" class="icon" data-icon="lock" data-enabled="false" role="button"></a></li>
-              <li class="quick-settings-long-button"><a href="#" id="quick-settings-full-app" class="icon" data-icon="settings" data-enabled="false" role="button" data-l10n-id="settings-link">Settings</a></li>
+              <li class="quick-settings-long-button"><a href="#" id="quick-settings-full-app" class="icon" data-icon="settings" data-enabled="false" role="button" data-l10n-id="modui-settings-link">Settings</a></li>
             </ul>
           </div>
         </div>
@@ -1161,7 +1161,7 @@
       <!-- cards view -->
       <div id="cards-view" data-z-index-level="cards-view">
         <ul id="cards-list"></ul>
-        <button id="modui-cards-button-close-all" class="close-all-cards">Close all</button>
+        <button id="modui-cards-button-close-all" class="close-all-cards" data-l10n-id="modui-close-all-link">Close all</button>
         <span id="cards-no-recent-windows" class="no-recent-apps" data-l10n-id="no-recent-app-windows">No recent windows</span>
       </div>
 
